# human-sdd-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/sample-project/: spec.md
scripts/bash/: common.sh  create-new-feature.sh
src/claude_sdd_cli/: __init__.py
src/claude_sdd_cli/ai/: __init__.py
src/claude_sdd_cli/cli/: main.py
src/claude_sdd_cli/commands/: check_no_code_cmd.py  clarify_cmd.py  feature_roadmap_cmd.py  init_cmd.py  plan_cmd.py  product_vision_cmd.py  review_cmd.py  specify_cmd.py  tasks_cmd.py  trace_cmd.py
src/claude_sdd_cli/integrations/: __init__.py
src/claude_sdd_cli/integrations/copilot/: __init__.py
src/claude_sdd_cli/review/: __init__.py
src/claude_sdd_cli/tracing/: __init__.py
src/human_sdd_cli/: __init__.py
src/human_sdd_cli/ai/: __init__.py
src/human_sdd_cli/cli/: main.py
src/human_sdd_cli/commands/: check_no_code_cmd.py  clarify_cmd.py  feature_roadmap_cmd.py  init_cmd.py  plan_cmd.py  product_vision_cmd.py  review_cmd.py  specify_cmd.py  tasks_cmd.py  trace_cmd.py
src/human_sdd_cli/integrations/copilot/: __init__.py
src/human_sdd_cli/parsers/: __init__.py
src/human_sdd_cli/review/: __init__.py
src/human_sdd_cli/templates/: __init__.py
src/human_sdd_cli/tracing/: __init__.py
src/human_sdd_cli/validators/: __init__.py
templates/: constitution-template.md  feature-roadmap-template.md  plan-template.md  product-vision-template.md  research-template.md  review-template.md  spec-template.md  tasks-template.md
templates/commands/: check-no-code.md  clarify.md  constitution.md  plan.md  review.md  roadmap.md  specify.md  tasks.md  trace.md  vision.md
tests/: test_cli.py  test_copilot_integration.py  test_parsers.py  test_tracing.py  test_validators.py
