[project]
name = "human-sdd-cli"
version = "0.2.0"
description = "A specification-driven development CLI that keeps humans as the sole code authors. AI plans, you code."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Frazaluc"},
]
keywords = ["sdd", "specification", "cli", "development", "planning", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer",
    "click>=8.1",
    "rich>=13.0",
    "platformdirs",
    "readchar",
    "pyyaml>=6.0",
    "packaging>=23.0",
]

[project.scripts]
hsdd = "human_sdd_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/human_sdd_cli"]

[tool.hatch.build.targets.wheel.force-include]
# Page templates
"templates/constitution-template.md" = "human_sdd_cli/core_pack/templates/constitution-template.md"
"templates/plan-template.md" = "human_sdd_cli/core_pack/templates/plan-template.md"
"templates/spec-template.md" = "human_sdd_cli/core_pack/templates/spec-template.md"
"templates/tasks-template.md" = "human_sdd_cli/core_pack/templates/tasks-template.md"
"templates/review-template.md" = "human_sdd_cli/core_pack/templates/review-template.md"
"templates/research-template.md" = "human_sdd_cli/core_pack/templates/research-template.md"
"templates/product-vision-template.md" = "human_sdd_cli/core_pack/templates/product-vision-template.md"
"templates/feature-roadmap-template.md" = "human_sdd_cli/core_pack/templates/feature-roadmap-template.md"
"templates/vscode-settings.json" = "human_sdd_cli/core_pack/templates/vscode-settings.json"
# Command templates
"templates/commands" = "human_sdd_cli/core_pack/commands"
# Shell scripts
"scripts/bash" = "human_sdd_cli/core_pack/scripts/bash"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
