[project]
name = "claude-sdd-cli"
version = "0.2.0"
description = "A specification-driven development CLI where AI plans via Copilot, and Claude CLI implements. AI plans, Claude codes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Frazaluc"},
]
keywords = ["sdd", "specification", "cli", "development", "planning", "copilot", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer",
    "click>=8.1",
    "rich>=13.0",
    "platformdirs",
    "readchar",
    "pyyaml>=6.0",
    "packaging>=23.0",
]

[project.scripts]
csdd = "claude_sdd_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sdd_cli"]

[tool.hatch.build.targets.wheel.force-include]
# Page templates
"templates/constitution-template.md" = "claude_sdd_cli/core_pack/templates/constitution-template.md"
"templates/plan-template.md" = "claude_sdd_cli/core_pack/templates/plan-template.md"
"templates/spec-template.md" = "claude_sdd_cli/core_pack/templates/spec-template.md"
"templates/tasks-template.md" = "claude_sdd_cli/core_pack/templates/tasks-template.md"
"templates/review-template.md" = "claude_sdd_cli/core_pack/templates/review-template.md"
"templates/research-template.md" = "claude_sdd_cli/core_pack/templates/research-template.md"
"templates/product-vision-template.md" = "claude_sdd_cli/core_pack/templates/product-vision-template.md"
"templates/feature-roadmap-template.md" = "claude_sdd_cli/core_pack/templates/feature-roadmap-template.md"
"templates/vscode-settings.json" = "claude_sdd_cli/core_pack/templates/vscode-settings.json"
# Command templates
"templates/commands" = "claude_sdd_cli/core_pack/commands"
# Shell scripts
"scripts/bash" = "claude_sdd_cli/core_pack/scripts/bash"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
